<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_wifi_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@color/setting_left"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_wifi_state"
            android:layout_width="220dip"
            android:layout_height="220dip"
            android:src="@drawable/ic_wifi0_big" />
    </LinearLayout>

    <RelativeLayout
        style="@style/h_Layout_Setting"
        android:layout_weight="3">

        <TextView
            android:id="@+id/txt_ssid"
            style="@style/h_Text_Setting"
            android:text="@string/wifi_title" />

        <TextView
            android:id="@+id/txt_connect_state"
            style="@style/h_Text_Setting"
            android:layout_below="@id/txt_ssid"
            android:layout_marginTop="@dimen/h_height_setting_spacingTop"
            android:text="@string/wifi_state_unconnected"
            android:textColor="@color/setting_default_color" />

        <TextView
            style="@style/h_Text_Setting"
            android:layout_alignParentBottom="true"
            android:text="@string/wifi_tips_opennet_available"
            android:textColor="@color/setting_text_bottom"
            android:textSize="@dimen/h_setting_wifi_bottom_textsize" />
    </RelativeLayout>

</LinearLayout>