<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/layout_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <!-- 左侧图标 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/setting_left"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_bluetooth"
                android:layout_width="220dip"
                android:layout_height="220dip"
                android:src="@drawable/icon_bluetooth_disconnect" />
        </LinearLayout>
        <!-- 右侧文字 -->

        <RelativeLayout
            style="@style/h_Layout_Setting"
            android:layout_weight="3">

            <TextView
                android:id="@+id/txt_bt_title"
                style="@style/h_Text_Setting"
                android:text="@string/label_bluetooth" />

            <TextView
                android:id="@+id/txt_bt_state"
                style="@style/h_Text_Setting"
                android:layout_alignLeft="@+id/txt_bt_title"
                android:layout_below="@+id/txt_bt_title"
                android:layout_marginTop="6.4dp"
                android:text=""
                android:textColor="@color/setting_default_color"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_bt_con_devicename"
                style="@style/h_Text_Setting"
                android:layout_alignLeft="@+id/txt_bt_title"
                android:layout_below="@+id/txt_bt_state"
                android:layout_marginTop="6.4dp"
                android:text=""
                android:textColor="@color/color_green"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_headset_state"
                style="@style/h_Text_Setting"
                android:layout_alignLeft="@+id/txt_bt_title"
                android:layout_below="@+id/txt_bt_con_devicename"
                android:layout_marginTop="6.4dp"
                android:text="@string/bluetooth_headset_conn"
                android:textColor="@color/color_green"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_bt_device_connect"
                style="@style/h_Text_Setting"
                android:layout_alignLeft="@+id/txt_bt_title"
                android:layout_below="@+id/txt_headset_state"
                android:layout_marginTop="6.4dp"
                android:text="已连接眼镜管家"
                android:textColor="@color/color_green"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_btvisible"
                style="@style/h_Text_Setting"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/h_height_setting_spacingTop"
                android:text="@string/label_bt_search"
                android:textColor="@color/setting_text_bottom"
                android:textSize="@dimen/h_setting_wifi_bottom_textsize" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>